<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>ca.carleton.gcrc</groupId>
	<artifactId>nunaliit2</artifactId>
	<version>2.2.9-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>nunaliit2</name>
	<description>Atlas SDK</description>
	<url>http://nunaliit.org</url>
	<licenses>
		<license>
			<name>New BSD License</name>
			<url>https://github.com/GCRC/nunaliit/blob/master/license.txt</url>
			<distribution>repo</distribution>
			<comments>This project contains code developed by the Geomatics and
			 Cartographics Research Centre (GCRC) at Carleton University.</comments>
		</license>
	</licenses>
  	<scm>
		<connection>scm:git:git@github.com:GCRC/nunaliit.git</connection>
		<developerConnection>scm:git:git@github.com:GCRC/nunaliit.git</developerConnection>
		<url>git@github.com:GCRC/nunaliit.git</url>
  </scm>
  <developers>
    <developer>
      <id>jpfiset</id>
  	  <name>Jean-Pierre Fiset</name>
  	  <email>jp@fiset.ca</email>
    </developer>
    <developer>
      <id>ahayes</id>
  	  <name>Amos Hayes</name>
    </developer>
    <developer>
      <id>glennbrauen</id>
  	  <name>Glenn Brauen</name>
    </developer>
  </developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
		<buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
		<closure-compiler.version>v20151015</closure-compiler.version>
		<commons-codec.version>1.14</commons-codec.version>
		<commons-fileupload.version>1.4</commons-fileupload.version>
		<commons-io.version>2.6</commons-io.version>
		<jetty.version>9.4.25.v20191220</jetty.version>
		<jslint4java-maven-plugin.version>2.0.5</jslint4java-maven-plugin.version>
		<junit.version>4.13</junit.version>
		<mail.version>1.5.4</mail.version>
		<maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<mustache.version>0.8.18</mustache.version>
		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
		<slf4j.version>1.7.30</slf4j.version>
	</properties>
	<modules>
		<module>nunaliit2-jdbc</module>
		<module>nunaliit2-jdbc-json</module>
		<module>nunaliit2-search</module>
		<module>nunaliit2-auth-common</module>
		<module>nunaliit2-auth-cookie</module>
		<module>nunaliit2-dbSec</module>
		<module>nunaliit2-auth-http</module>
		<module>nunaliit2-dbWeb</module>
		<module>nunaliit2-adhocQueries</module>
		<module>nunaliit2-multimedia</module>
		<module>nunaliit2-upload</module>
		<module>nunaliit2-progress</module>
		<module>nunaliit2-js-external</module>
		<module>nunaliit2-js</module>
		<module>nunaliit2-couch-client</module>
		<module>nunaliit2-couch-onUpload</module>
		<module>nunaliit2-couch-application</module>
		<module>nunaliit2-couch-replication</module>
		<module>nunaliit2-gpx</module>
		<module>nunaliit2-gpx-jaxb</module>
		<module>nunaliit2-couch-mobile</module>
		<module>nunaliit2-couch-utils</module>
		<module>nunaliit2-couch-command</module>
		<module>nunaliit2-couch-sdk</module>
		<module>nunaliit2-json</module>
		<module>nunaliit2-couch-export</module>
		<module>nunaliit2-geom</module>
		<module>nunaliit2-javascript</module>
		<module>nunaliit2-css</module>
		<module>nunaliit2-utils</module>
		<module>nunaliit2-couch-user</module>
		<module>nunaliit2-mail</module>
		<module>nunaliit2-security</module>
		<module>nunaliit2-couch-submission</module>
		<module>nunaliit2-couch-date</module>
		<module>nunaliit2-couch-simplifiedGeometry</module>
	</modules>
</project>
